[hsw iommu] i915 0000:00:02.0: GPU HANG: ecode 7:0:0x00000000, hang on rcs0
@mdontu
Submitted by Mihai Donțu Assigned to Intel GFX Bugs mailing list
Link to original bug (#111790)
Description
Created attachment 145476
the card error state
I use synergy to control my desktop from my laptop, and simply moving the mouse from the remote screen to the local one, triggered this:
Sep 23 22:46:30 mdontu-l kernel: DMAR: DRHD: handling fault status reg 3
Sep 23 22:46:30 mdontu-l kernel: DMAR: [DMA Write] Request device [00:02.0] fault addr 94f99000 [fault reason 05] PTE Write access is not set
Sep 23 22:48:51 mdontu-l kernel: i915 0000:00:02.0: GPU HANG: ecode 7:0:0x00000000, hang on rcs0
Sep 23 22:48:51 mdontu-l kernel: [drm] GPU hangs can indicate a bug anywhere in the entire gfx stack, including userspace.
Sep 23 22:48:51 mdontu-l kernel: [drm] Please file a new bug report on bugs.freedesktop.org against DRI -> DRM/Intel
Sep 23 22:48:51 mdontu-l kernel: [drm] drm/i915 developers can then reassign to the right component if it's not a kernel issue.
Sep 23 22:48:51 mdontu-l kernel: [drm] The gpu crash dump is required to analyze gpu hangs, so please always attach it.
Sep 23 22:48:51 mdontu-l kernel: [drm] GPU crash dump saved to /sys/class/drm/card0/error
Sep 23 22:48:51 mdontu-l kernel: i915 0000:00:02.0: Resetting chip for hang on rcs0
It has happened three or four times before and only with Linux 5.3.x. Linux 5.2 did not exhibit this behaviour. I use suspend to RAM quite often. Maybe that plays a role. Anyway, it does not bother me. The screen is frozen for a few seconds and then everything is back to normal.
Attachment 145476, "the card error state":
drm-card0-error.txt